--- a/app/views/lp.html.erb
+++ b/app/views/lp.html.erb
@@ -51,7 +51,7 @@
             <h2 class="lp-panel-item-site-title">wArally!</h2>
             <p class="lp-panel-item-text" style="text-align:center">ログインするとwArally!のすべての機能をご利用いただけます！</p>
             <%= link_to user_twitter_omniauth_authorize_path, :class =>"btn twitter-fill radius new-login" do %>
-                <i class="fa fa-twitter"></i> さっそく使い始める!
+                <i class="fab fa-twitter"></i> さっそく使い始める!
             <% end %>
             </div>
         </div>
