--- a/app/views/geinins/_geinin_edit.html.erb
+++ b/app/views/geinins/_geinin_edit.html.erb
@@ -1,67 +1,62 @@
-<div class="event-box">
-  <%= form_for(@geinin) do |f| %>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fas fa-user"></i>
-    </div>
-    <div class="form">
-      <%= f.text_field :name,:placeholder => "芸人名 *",:class => "event-edit-form form-long",:required=>"true" %>
-    </div>    
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fas fa-user"></i>
   </div>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fas fa-address-card"></i>
-    </div>
-    <div class="form">
-      <%= f.text_field :yomi,:placeholder => "ふりがな *",:class => "event-edit-form form-long",:required=>"true" %>
-    </div>    
-  </div>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fas fa-bookmark"></i>
-    </div>
-    <div class="form">
-      <%= f.text_field :agency,:placeholder => "事務所",:class => "event-edit-form form-long" %><br>
-    </div>
-  </div>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fab fa-twitter-square"></i>
-    </div>
-    <div class="form">
-      <%= f.text_field :twitter_id,:placeholder => "Twitter ID",:class => "event-edit-form form-long"  %>
-    </div>
-  </div>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fab fa-youtube"></i>
-    </div>
-    <div class="form">
-      <%= f.text_field :youtube_url,:placeholder => "Youtube URL",:class => "event-edit-form form-long"  %>
-    </div>
-  </div>
-  <div class="form-item">
-    <div class="form-icon">
-      <i class="fas fa-tags"></i>
-    </div>
-    <div class="form">
-      <%= f.fields_for :geinin_tags do |tags_form| %>
-        <%= tags_form.text_area :tag,:placeholder => "タグ (例:芸風(漫才、コント)、賞レース戦績、代表的な出演番組など)",:class => "event-edit-form form-long"  %>
-      <% end %>
-    </div>
-  </div>
-  <div class="more-info">
-    メンバー1
-  </div>
-  <%= render 'geinins/geinin_member_form', f: f %>
-  <div class="more-info">
-    メンバー2
-  </div>
-  <%= render 'geinins/geinin_member_form', f: f %>
-  <div class="more-info">
-    メンバー3
-  </div>
-  <%= render 'geinins/geinin_member_form', f: f %>
+  <div class="form">
+    <%= f.text_field :name,:placeholder => "芸人名 *",:class => "event-edit-form form-long",:required=>"true" %>
+  </div>    
 </div>
-  <%= f.submit '登録する！', :class => "btn new pink create-post" %>
-<% end %> 
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fas fa-address-card"></i>
+  </div>
+  <div class="form">
+    <%= f.text_field :yomi,:placeholder => "ふりがな *",:class => "event-edit-form form-long",:required=>"true" %>
+  </div>    
+</div>
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fas fa-bookmark"></i>
+  </div>
+  <div class="form">
+    <%= f.text_field :agency,:placeholder => "事務所",:class => "event-edit-form form-long" %><br>
+  </div>
+</div>
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fab fa-twitter-square"></i>
+  </div>
+  <div class="form">
+    <%= f.text_field :twitter_id,:placeholder => "Twitter ID",:class => "event-edit-form form-long"  %>
+  </div>
+</div>
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fab fa-youtube"></i>
+  </div>
+  <div class="form">
+    <%= f.text_field :youtube_url,:placeholder => "Youtube URL",:class => "event-edit-form form-long"  %>
+  </div>
+</div>
+<div class="form-item">
+  <div class="form-icon">
+    <i class="fas fa-tags"></i>
+  </div>
+  <div class="form">
+    <textarea placeholder="タグ (例:芸風(漫才、コント)、賞レース戦績、代表的な出演番組など)" class="event-edit-form form-long" name="geinin[geinin_tags_attributes][0][tag]" id="geinin_geinin_tags_attributes_0_tag"><% @geinin_tags %></textarea>
+  </div>
+</div>
+<div class="more-info">
+  メンバー1
+</div>
+<%= render 'geinins/geinin_member_form', f: f %>
+<div class="more-info">
+  メンバー2
+</div>
+<%= render 'geinins/geinin_member_form', f: f %>
+<div class="more-info">
+  メンバー3
+</div>
+<%= render 'geinins/geinin_member_form', f: f %>
+
+<%= f.submit '登録する！', :class => "btn new pink create-post" %>
