--- a/app/views/geinins/_geinin_member_form.html.erb
+++ b/app/views/geinins/_geinin_member_form.html.erb
@@ -1,11 +1,11 @@
-<%= f.fields_for :geinin_member do |member_form| %>
+<%= f.fields_for :geinin_members_attributes do |member_form| %>
   <div class="form-item">
     <div class="form-icon">
       <i class="fas fa-address-book"></i>
     </div>
     <div class="form">
       <%= member_form.text_field :family_name,:placeholder => "姓*",:class => "event-edit-form form-short"  %>
-      <%= member_form.text_field :first_name,:placeholder => "名*",:class => "event-edit-form form-short"  %>
+      <%= member_form.text_field :first_name,:placeholder => "名",:class => "event-edit-form form-short"  %>
     </div>
   </div>
   <div class="form-item">
@@ -13,8 +13,8 @@
       <i class="fas fa-address-card"></i>
     </div>
     <div class="form">
-      <%= member_form.text_field :family_name_yomi,:placeholder => "ふりがな(姓)*",:class => "event-edit-form form-short"  %>
-      <%= member_form.text_field :first_name_yomi,:placeholder => "ふりがな(名)*",:class => "event-edit-form form-short"  %>
+      <%= member_form.text_field :family_name_yomi,:placeholder => "ふりがな(姓)*",:class => "event-edit-form form-short" %>
+      <%= member_form.text_field :first_name_yomi,:placeholder => "ふりがな(名)",:class => "event-edit-form form-short"  %>
     </div>
   </div>
   <div class="form-item">
@@ -47,8 +47,6 @@
     <i class="fas fa-tags"></i>
   </div>
   <div class="form">
-    <%= f.fields_for :geinin_members_tags do |member_tags_form| %>
-      <%= member_tags_form.text_area :tag,:placeholder => "タグ (例:芸風(ボケ、ツッコミ)、特技、趣味、逸話などなんでも)",:class => "event-edit-form form-long"  %>
-    <% end %>
+    <textarea placeholder="タグ (例:芸風(ボケ、ツッコミ)、特技、趣味、逸話などなんでも)" class="event-edit-form form-long" name="geinin[geinin_members_attributes[0][geinin_member_tags_attributes]][0][tag]" id="geinin_geinin_members_attributes_0_geinin_member_tags_attributes_0_tag"><%= @geinin_members_tags %></textarea>
   </div>
 </div>
