--- a/app/views/geinins/index.html.erb
+++ b/app/views/geinins/index.html.erb
@@ -3,10 +3,32 @@
     <p>芸人一覧</p>
   </div>
   <%= render :partial => "geinins/search_form",locales: { geinins: @geinins, geinin_tags: @geinin_tags } %>
-	<%= link_to survey_path,:class =>"btn pink categories" do %>
-		<i class="fas fa-file-alt"></i>
-		<span class="user-menu-button-text">アンケート結果</span>
-	<% end %>
+	<div class="geinin-btns">
+		<%= link_to new_geinin_path,:class =>"btn green geinin-btn" do %>
+			<i class="fa fa-plus-circle"></i>
+			<span class="user-menu-button-text">芸人を登録する</span>
+		<% end %>
+		<%= link_to survey_path,:class =>"btn pink geinin-btn-2" do %>
+			<i class="fas fa-file-alt"></i>
+			<span class="user-menu-button-text">アンケート結果</span>
+		<% end %>
+	</div>
+  <div class="indexes">
+    <input id="a-tab" type="radio" name="index_item" checked>
+    <label class="index_item" for="a-tab">あ</label>
+
+    <input id="i-tab" type="radio" name="index_item">
+    <label class="index_item" for="i-tab">い</label>
+  
+    <input id="u-tab" type="radio" name="index_item">
+    <label class="index_item" for="u-tab">う</label>
+
+    <input id="e-tab" type="radio" name="index_item">
+    <label class="index_item" for="e-tab">え</label>
+
+    <input id="o-tab" type="radio" name="index_item">
+    <label class="index_item" for="o-tab">お</label>
+  </div>
 	<div class="geinin-list">
 		<% if @geinins.present? %>
 			<% @geinins.each do |geinin| %>
