--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<% @events = @my_info[0] %>
+<% @geinins = @my_info[1] %>
+
 <section class="main">
   <div class="page-info hard-shadows">
     <p>Myページ</p>
@@ -25,29 +28,43 @@
         </div>
 
         <div class="profile-nav">
-          <ul class="profile-nav-list">
-            <li class="profile-nav-item">
-              <%= link_to following_path,:class=>"" do %>
-                <span class="profile-nav-label">ライブ登録数</span>
-                <span class="profile-value"><%= EventChangeHistory.where(user_id: current_user.id).select(:event_id).uniq.count %></span>
+          <input id="posted-event-tab" type="radio" name="profile-nav-item" checked>
+          <label class="profile-nav-item" for="posted-event-tab">
+            <span class="profile-nav-label">ライブ登録数</span>
+            <span class="profile-value"><%= EventChangeHistory.where(user_id: current_user.id).select(:event_id).uniq.count %></span>
+          </label>
+          <input id="following-geinin-tab" type="radio" name="profile-nav-item">
+          <label class="profile-nav-item" for="following-geinin-tab">
+            <span class="profile-nav-label">フォロー</span>
+            <span class="profile-value"><%= Following.where(user_id: current_user.id).count %></span>
+          </label>
+          <li class="profile-nav-item">
+            <%= link_to logout_path, :method => :delete,:class=>"profile-nav-btn" do %>
+              <span class="profile-nav-label">ログアウト</span>
+              <span class="profile-value fa fa-sign-out-alt"></span>
+            <% end %>
+          </li>
+        </div>
+          <div class="profile-nav-content">
+            <div class="profile-nav-item-content" id="posted-event-tab-content">
+              <% if @events.present? %>
+                <%= render :partial => 'events/event_list',  locals: { events: @events, user: @user } %>
+              <% else %>
+                <%= render 'events/no_result' %>
               <% end %>
-            </li>
-            <li class="profile-nav-item">
-              <%= link_to following_path,:class=>"" do %>
-                <span class="profile-nav-label">フォロー</span>
-                <span class="profile-value"><%= Following.where(user_id: current_user.id).count %></span>
+            </div>
+          </div>
+          <div class="profile-nav-content">
+            <div class="profile-nav-item-content" id="following-geinin-tab-content">
+              <% if @geinins.present? %>
+                <%= render :partial => 'followings/following_list', locals: { geinins: @geinins, user: @user } %>
+              <% else %>
+                <%= render 'geinins/no_result' %>
               <% end %>
-            </li>
-            <li class="profile-nav-item">
-              <%= link_to following_path,:class=>"" do %>
-                <span class="profile-nav-label">ログアウト</span>
-                <span class="profile-value fa fa-sign-out-alt"></span>
-              <% end %>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <%= render :partial => "events/event_list", locals: { events: @events, user: @user } %>
 </section>
