--- a/app/views/events/_event_edit.html.erb
+++ b/app/views/events/_event_edit.html.erb
@@ -19,7 +19,7 @@
         <i class="fas fa-map-marker-alt"></i>
       </div>
       <div class="form">
-        <%= f.text_field :place,:placeholder => "ライブ会場 *",:class => "event-edit-form form-long",:required=>"true" %>
+        <%= f.text_field :place,:placeholder => "ライブ会場(例:新宿バティオス) *",:class => "event-edit-form form-long",:required=>"true" %>
       </div>
     </div>
     <div class="form-item">
@@ -53,16 +53,14 @@
         <%= f.text_area :description,:placeholder => "ライブの説明",:class => "event-edit-form textarea form-long" %>
       </div>
     </div>
-    <div class="form-item">
+    <!--<div class="form-item">
       <div class="form-icon">
-        <i class="fas fa-link"></i>
+        <i class="fas fa-tags"></i>
       </div>
       <div class="form">
-        <%= f.fields_for :event_categories do |categories_form| %>
-          <%= categories_form.text_field :category,:placeholder => "カテゴリ",:class => "event-edit-form form-long"  %>
-        <% end %>
+        <textarea placeholder="タグ（例:単独ライブ、エントリー制）(改行でタグになります)" class="event-edit-form textarea form-long" name="event[event_categories_attributes][0][category]" id="event_event_categories_attributes_0_category"><%= event_categories %></textarea>    
       </div>
-    </div>
+    </div>-->
     <div class="form-item">
       <div class="form-icon">
         <i class="fas fa-envelope"></i>
