--- a/app/views/geinins/index.html.erb
+++ b/app/views/geinins/index.html.erb
@@ -1,3 +1,4 @@
+<% binding.pry %>
 <section class="main">
   <div class="page-info hard-shadows">
     <p>芸人一覧</p>
@@ -35,9 +36,6 @@
 				<div class="geinin hard-shadows">
 					<div class="geinin-wrapper">
 							<div class="geinin-box">
-								<div class="geinin-image-box">
-									<img src="https://pbs.twimg.com/profile_images/981910291565834240/We9YESpz_400x400.jpg">
-								</div>
 								<div class="geinin-name-box">
 									<%= link_to geinin.name, "geinins/#{geinin.id}", :class => "geinin-name" %>
 								</div>
